<resources>
    <string name="app_name">QuizApp</string>
    <string name="signup">SignUP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="imgbutton">imgbutton\n</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="button">Button</string>
    <string name="save">Save</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="personal_information">Personal Information</string>
</resources>