<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.profileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="406dp"
            android:layout_height="213dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="130dp"
                android:layout_height="110dp"
                android:layout_marginStart="200dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="200dp"
                android:contentDescription="TODO"
                android:scaleType="centerCrop"
                android:src="@drawable/baseline_supervised_user_circle_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="59dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Name"
                app:layout_constraintEnd_toEndOf="@+id/imageView5"
                app:layout_constraintStart_toStartOf="@+id/imageView5"
                app:layout_constraintTop_toBottomOf="@+id/imageView5" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="403dp"
            android:layout_height="54dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="216dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/textviewshap"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/expandableconstratintlayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="342dp"
                android:fontFamily="@font/arbutus_slab"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="center|fill_vertical"
                android:text="@string/personal_information"
                android:textColor="@color/titlecolor"
                android:textSize="22sp"
                android:textStyle="bold" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/expandableconstratintlayout"
            android:layout_width="408dp"
            android:layout_height="356dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <LinearLayout
                android:id="@+id/personalinformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/textviewshap"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:fontFamily="@font/amaranth"
                    android:gravity="start|left|center_vertical"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:paddingStart="15dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textColorHint="#546E7A"
                    android:textSize="20sp"
                    tools:ignore="RtlHardcoded" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/amaranth"
                    android:gravity="start|left|center_vertical"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:paddingStart="15dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textColorHint="#546E7A"
                    android:textSize="20sp"
                    tools:ignore="InefficientWeight,RtlHardcoded" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/amaranth"
                    android:gravity="start|left|center_vertical"
                    android:hint="@string/password"
                    android:inputType="numberPassword|textPassword"
                    android:minHeight="48dp"
                    android:paddingStart="15dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textColorHint="#546E7A"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/amaranth"
                    android:gravity="start|left|center_vertical"
                    android:hint="@string/age"
                    android:inputType="number"
                    android:minHeight="48dp"
                    android:paddingStart="15dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textColorHint="#546E7A"
                    android:textSize="20sp"
                    tools:ignore="RtlHardcoded" />

                <EditText
                    android:id="@+id/country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/amaranth"
                    android:gravity="start|left|center_vertical"
                    android:hint="Country"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:paddingStart="15dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textColorHint="#546E7A"
                    android:textSize="20sp"
                    tools:ignore="HardcodedText,RtlHardcoded" />

                <Button
                    android:id="@+id/savebtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/buttoncolor"
                    android:text="@string/save"
                    android:fontFamily="@font/amaranth"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="RtlCompat" />


            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="396dp"
            android:layout_marginEnd="160dp"
            android:backgroundTint="@color/optionbuttoncolor"
            android:gravity="center"
            android:text="@string/button"
            android:textSize="18sp"
            android:fontFamily="@font/amaranth"
            android:textColor="#424242"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>
